syntax = "proto3";

package portfolio;

option go_package = "github.com/Prototype-1/freelanceX_user_service/proto/portfolio";

service PortfolioService {
  rpc CreatePortfolio(CreatePortfolioRequest) returns (CreatePortfolioResponse);
  rpc GetPortfolio(GetPortfolioRequest) returns (GetPortfolioResponse);
  rpc DeletePortfolio(DeletePortfolioRequest) returns (DeletePortfolioResponse);
}

// Portfolio message definition
message CreatePortfolioRequest {
  string freelancer_id = 1; 
  string title = 2;          
  string description = 3;   
  string image_url = 4;     
  string link = 5;          
}

message CreatePortfolioResponse {
  string message = 1;  
}

message GetPortfolioRequest {
  string freelancer_id = 1;  
}

message GetPortfolioResponse {
  repeated PortfolioItem portfolio = 1;  
}

message PortfolioItem {
  string id = 1;        
  string title = 2;    
  string description = 3;
  string image_url = 4;  
  string link = 5;      
  string created_at = 6;
}

message DeletePortfolioRequest {
  string portfolio_id = 1;
}

message DeletePortfolioResponse {
  string message = 1; 
}
